Issue 8 fix: missaligned skills for life logo

--- a/src/nationalcareers_toolkit/assets/src/frontend/sass/compui/ypfc.scss
+++ b/src/nationalcareers_toolkit/assets/src/frontend/sass/compui/ypfc.scss
@@ -98,155 +98,6 @@
         background: transparent !important;
     }
 
-
-    @media only screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait) {
-        .header-image-sub {
-            width: 130px;
-            position: absolute;
-            right: 20px !important;
-            bottom: 20px !important;
-            left: unset !important;
-        }
-
-
-        .header-image {
-            top: -80px !important;
-            right: -190px !important;
-            clip: rect(0,310px,250px,0) !important;
-        }
-
-        .header-image {
-            width: 290px !important;
-            top: 10px !important;
-            right: -30px !important;
-            clip: unset !important;
-            height: 250px !important;
-        }
-
-        .header-image-sub {
-            left: 220px !important;
-        }
-    }
-
-    @media only screen and (device-width: 414px) and (device-height: 896px), (device-width: 390px) and (device-height: 844px), (device-width: 393px) and (device-height: 851px), (device-width: 412px) and (device-height: 915px), (device-width: 414px) and (device-height: 736px) {
-        .header-image-sub {
-            left: 250px !important;
-        }
-
-        .header-image {
-            top: -20px !important;
-        }
-    }
-
-    @media only screen and (device-width: 667px) and (device-height: 375px) {
-        .header-image-sub {
-            bottom: -150px !important;
-            left: 150px !important;
-        }
-
-        .header-image {
-            top: -60px !important;
-        }
-    }
-
-    @media only screen and (device-width: 768px) and (device-height: 1024px), (device-width: 740px) and (device-height: 360px), (device-width: 736px) and (device-height: 414px) {
-        .header-image {
-            top: -60px !important;
-            right: 0 !important;
-        }
-
-        .header-image-sub {
-            left: unset !important;
-        }
-    }
-
-    @media only screen and (device-width: 740px) and (device-height: 360px) {
-        .header-image {
-            right: 20px !important;
-        }
-
-        .header-image-sub {
-            right: 60px !important;
-        }
-    }
-
-    @media only screen and (device-width: 812px) and (device-height: 375px) {
-        .header-image {
-            width: 420px !important;
-        }
-    }
-
-
-    @media only screen and (device-width: 736px) and (device-height: 414px) {
-        .header-image-sub {
-            right: 30px !important;
-        }
-    }
-
-    @media only screen and (device-width: 428px) and (device-height: 926px) {
-        .header-image {
-            top: -40px !important;
-        }
-
-        .header-image-sub {
-            right: 10px !important;
-            left: 270px !important;
-        }
-    }
-
-    @media only screen and (device-width: 360px) and (device-height: 740px) {
-        .header-image-sub {
-            left: 220px;
-        }
-    }
-
-    @media only screen and (device-width: 740px) and (device-height: 360px) {
-        .header-image-sub {
-            right: 20px !important;
-            left: unset !important;
-        }
-
-        .header-image {
-            width: 400px !important;
-            clip: rect(0,360px,250px,0);
-            top: unset;
-            right: unset;
-        }
-    }
-
-    @media only screen and (device-width: 820px) and (device-height: 1180px) {
-        .header-image {
-            width: 400px !important;
-            clip: rect(0,360px,250px,0);
-        }
-    }
-
-    @media only screen and (device-width: 540px) and (device-height: 720px) {
-        .header-image-sub {
-            left: unset;
-            right: 20px;
-        }
-
-        .header-image {
-            clip: rect(0,350px,250px,0) !important;
-            right: -130px !important;
-            width: 400px !important;
-            top: -80px !important;
-        }
-    }
-
-    @media only screen and (device-width: 667px) and (device-height: 375px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape) {
-        .header-image-sub {
-            position: relative !important;
-            left: 160px !important;
-            bottom: -150px !important;
-        }
-
-        .header-image {
-            top: -80px !important;
-        }
-    }
-
     @media only screen and (max-width: 768px) {
         .ypfc-hero .govuk-grid-column-one-half {
             width: 50%;
@@ -255,7 +106,8 @@
         .header-image-sub {
             width: 130px;
             position: absolute;
-            left: 240px;
+            left: unset;
+            right: 30px;
             bottom: 20px !important;
         }
 
@@ -286,14 +138,9 @@
 
         .header-image {
             width: 290px !important;
-            top: 10px !important;
             right: -30px !important;
             clip: unset !important;
             height: 250px !important;
-        }
-
-        .header-image-sub {
-            left: 220px !important;
         }
     }
 
@@ -554,8 +401,7 @@
         font-size: 19px;
     }
 
-    .dfc-app-pages-alignment-left {
-    }
+
 
     @media only screen and (device-width: 844px) and (device-height: 390px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape) {
         .ypfc-box {
